syntax = "proto3";

package golem.worker;

import "golem/component/component_files.proto";

message WasiConfigVars {
  repeated WasiConfigVarsEntry entries = 1;
}

message WasiConfigVarsEntry {
  string key = 1;
  string value = 2;
}
